# mesh_mass_spring

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile  mass_spring.tex
inc/: mesh.h  process_bar.h  remove_duplicate_vert.h  solver.h  time_integral.h  write_to_file.h  writer.h
src/: CMakeLists.txt  balance.cpp  dynamic.cpp  dynamic.cu  main.cpp  mesh.cpp  mesh.cu  remove_duplicate_vert.cpp  solver.cpp  time_integral.cpp  time_integral.cu  writer.cpp  writer.cu
